View list : avoid filtered list to be sorted; default mode for filtered list is 'flat';  block 'Filter activated views' button when no view are activated or visible; block filter toggle checkbox with a count of zero

--- a/app/src/css/mx_base.css
+++ b/app/src/css/mx_base.css
@@ -198,6 +198,12 @@ blockquote {
   cursor: pointer;
 }
 
+.mx-bar-sort .mx-btn-toggle-filter.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
 .mx-bar-sort .mx-btn-toggle-filter * {
   pointer-events: none;
 }
